Reorganizando as pastas para implementar o princípio SOLID de responsabilidade unica
